--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
     "start": "ts-node hello.ts"
   },
   "devDependencies": {
-    "@types/node": "13.7.7",
-    "ts-node": "8.6.2",
-    "typescript": "3.8.3"
+    "@types/node": "20.11.6",
+    "esm": "^3.2.25",
+    "ts-node": "10.9.2",
+    "typescript": "5.3.3"
   }
 }
