--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
+  "type":"module",
   "compilerOptions": {
     "strict": true,
-    "target": "es6",
-    "module": "commonjs",
+    "target": "ES2017",
+    "module": "ESNext",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true
   },
