--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   },
   "devDependencies": {
     "@types/node": "20.11.6",
-    "esm": "^3.2.25",
+    "esm": "3.2.25",
     "ts-node": "10.9.2",
     "typescript": "5.3.3"
   }
